# task_releaser

./: .gitattributes  .gitignore  MANIFEST.in  README.md  _release.py  _version.py  create_zip.py  data.csv  data2.csv  default_templates.json  freeze_setup.py  install-docureader.bat  install-docureader.ps1  migrate.py  pyproject.toml  rebuild_and_package.py  shorted locations.csv  task ids.csv  templates.py  tr.py  tr_gui.py  update.py  updater_github.py  view.py
.github/workflows/: release.yml
ThreatDragonModels/Schumacher_CSD370/: Schumacher_CSD370.json
docureader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_templates.py  test_updater_github.py  test_view.py
